--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -196,18 +196,78 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MoviesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201606162315449_InitialModel.cs" />
+    <Compile Include="Migrations\201606162315449_InitialModel.Designer.cs">
+      <DependentUpon>201606162315449_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201606162342129_AddIsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\201606162342129_AddIsSubscribedToCustomer.Designer.cs">
+      <DependentUpon>201606162342129_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201606162346067_AddMembershipType.cs" />
+    <Compile Include="Migrations\201606162346067_AddMembershipType.Designer.cs">
+      <DependentUpon>201606162346067_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201606162349257_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201606162349257_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201606162349257_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201606170023375_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\201606170023375_ApplyAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>201606170023375_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201606170114178_AddMembershipTypeName.cs" />
+    <Compile Include="Migrations\201606170114178_AddMembershipTypeName.Designer.cs">
+      <DependentUpon>201606170114178_AddMembershipTypeName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201606170115236_PopulateMembershipTypesNames.cs" />
+    <Compile Include="Migrations\201606170115236_PopulateMembershipTypesNames.Designer.cs">
+      <DependentUpon>201606170115236_PopulateMembershipTypesNames.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201606170149453_AddBirthdateToCustomer.cs" />
+    <Compile Include="Migrations\201606170149453_AddBirthdateToCustomer.Designer.cs">
+      <DependentUpon>201606170149453_AddBirthdateToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201606170356513_AddMovie.cs" />
+    <Compile Include="Migrations\201606170356513_AddMovie.Designer.cs">
+      <DependentUpon>201606170356513_AddMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201606170358092_AddGenre.cs" />
+    <Compile Include="Migrations\201606170358092_AddGenre.Designer.cs">
+      <DependentUpon>201606170358092_AddGenre.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201606170358449_PopulateGenres.cs" />
+    <Compile Include="Migrations\201606170358449_PopulateGenres.Designer.cs">
+      <DependentUpon>201606170358449_PopulateGenres.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201606170359099_PopulateMovies.cs" />
+    <Compile Include="Migrations\201606170359099_PopulateMovies.Designer.cs">
+      <DependentUpon>201606170359099_PopulateMovies.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201606170400108_AddMovieReleaseDate_DateAdded_NumberInStock.cs" />
+    <Compile Include="Migrations\201606170400108_AddMovieReleaseDate_DateAdded_NumberInStock.Designer.cs">
+      <DependentUpon>201606170400108_AddMovieReleaseDate_DateAdded_NumberInStock.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\IndexCustomerViewModel.cs" />
+    <Compile Include="ViewModels\IndexMovieViewModel.cs" />
+    <Compile Include="ViewModels\RandomMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-lumen.css" />
@@ -271,6 +331,11 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Movies\Random.cshtml" />
+    <Content Include="Views\Shared\_NavBar.cshtml" />
+    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Customers\Index.cshtml" />
+    <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -282,6 +347,47 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201606162315449_InitialModel.resx">
+      <DependentUpon>201606162315449_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606162342129_AddIsSubscribedToCustomer.resx">
+      <DependentUpon>201606162342129_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606162346067_AddMembershipType.resx">
+      <DependentUpon>201606162346067_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606162349257_PopulateMembershipTypes.resx">
+      <DependentUpon>201606162349257_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606170023375_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>201606170023375_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606170114178_AddMembershipTypeName.resx">
+      <DependentUpon>201606170114178_AddMembershipTypeName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606170115236_PopulateMembershipTypesNames.resx">
+      <DependentUpon>201606170115236_PopulateMembershipTypesNames.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606170149453_AddBirthdateToCustomer.resx">
+      <DependentUpon>201606170149453_AddBirthdateToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606170356513_AddMovie.resx">
+      <DependentUpon>201606170356513_AddMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606170358092_AddGenre.resx">
+      <DependentUpon>201606170358092_AddGenre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606170358449_PopulateGenres.resx">
+      <DependentUpon>201606170358449_PopulateGenres.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606170359099_PopulateMovies.resx">
+      <DependentUpon>201606170359099_PopulateMovies.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606170400108_AddMovieReleaseDate_DateAdded_NumberInStock.resx">
+      <DependentUpon>201606170400108_AddMovieReleaseDate_DateAdded_NumberInStock.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
