--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -283,6 +283,10 @@
     <Compile Include="Migrations\201606280303372_SetMovieNameRequired.Designer.cs">
       <DependentUpon>201606280303372_SetMovieNameRequired.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201608222313188_SeedUsers.cs" />
+    <Compile Include="Migrations\201608222313188_SeedUsers.Designer.cs">
+      <DependentUpon>201608222313188_SeedUsers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -595,6 +599,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201606280303372_SetMovieNameRequired.resx">
       <DependentUpon>201606280303372_SetMovieNameRequired.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201608222313188_SeedUsers.resx">
+      <DependentUpon>201608222313188_SeedUsers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
