Added driving license to users

--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -287,6 +287,10 @@
     <Compile Include="Migrations\201608222313188_SeedUsers.Designer.cs">
       <DependentUpon>201608222313188_SeedUsers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201608240320324_AddDrivingLicenseToApplicationUser.cs" />
+    <Compile Include="Migrations\201608240320324_AddDrivingLicenseToApplicationUser.Designer.cs">
+      <DependentUpon>201608240320324_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -604,6 +608,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201608222313188_SeedUsers.resx">
       <DependentUpon>201608222313188_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201608240320324_AddDrivingLicenseToApplicationUser.resx">
+      <DependentUpon>201608240320324_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
